Update doc and gmks